イベント投稿機能実装

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -82,7 +82,7 @@
           <%= link_to '/users/sign_out', method: :delete do %>
             <button class="btn btn-outline-danger" type="button">ログアウト</button>
           <% end %>
-          <%= link_to '#', class: "post" do %>
+          <%= link_to '/events/new', class: "post" do %>
             <button class="btn btn-danger" type="button">投稿する</button>
           <% end %>
         </div>
