--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -127,7 +127,8 @@
                   <%= image_tag event.images[0], class: "event-img" %>
 
                   <div class="card-body">
-                    <p class="card-text"><%= event.description %></p>
+                    <h5 class="card-title d-inline-block text-truncate" style="max-width: 100%;"><%= event.title %></h5><br>
+                    <p class="card-text d-inline-block text-truncate" style="max-width: 100%;"><%= event.description %></p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
