--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -16,7 +16,7 @@
   <%= f.text_area :meeting_place %><br>
   <p>帰着場所</p>
   <%= f.text_area :return_place %><br>
-  <p>距離</p>
+  <p>走行距離</p>
   <%= f.text_area :distance %>km<br>
   <p>獲得標高</p>
   <%= f.text_area :climbing %>m<br>
@@ -24,5 +24,5 @@
   <%= f.datetime_field :start_time, class: 'form-control' %><br>
   <label class="control-label" for="">解散日時</label>
   <%= f.datetime_field :end_time, class: 'form-control' %><br>
-  <%= f.submit '投稿' %>
+  <%= f.submit '投稿する' %>
 <% end %>
