--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -57,7 +57,7 @@
           <div class="d-flex justify-content-between align-items-center">
             <% if user_signed_in? && current_user.id == @event.user_id %>
               <div class="btn-group">
-                <button type="button" class="btn btn-primary rounded-pill btn-lg">編集</button>
+                <%= link_to "編集", "/events/#{@event.id}/edit", method: :get, class: "btn btn-primary rounded-pill btn-lg" %>
                 <button type="button" class="btn btn-danger rounded-pill btn-lg">削除</button>
               </div>
             <% elsif user_signed_in? %>
