--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -58,7 +58,7 @@
             <% if user_signed_in? && current_user.id == @event.user_id %>
               <div class="btn-group">
                 <%= link_to "編集", "/events/#{@event.id}/edit", method: :get, class: "btn btn-primary rounded-pill btn-lg" %>
-                <button type="button" class="btn btn-danger rounded-pill btn-lg">削除</button>
+                <%= link_to "削除", event_path(@event.id), method: :delete, class: "btn btn-danger rounded-pill btn-lg" %>
               </div>
             <% elsif user_signed_in? %>
               <button type="button" class="btn btn-danger rounded-pill btn-lg">エントリー</button>
