--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5 mb-5">
 
   <div class="row">
     <div class="col">
@@ -64,7 +64,9 @@
               <% if user_signed_in? && current_user.id == @event.user_id %>
                 <div class="btn-group mx-auto">
                   <%= link_to "編集", "/events/#{@event.id}/edit", method: :get, class: "btn btn-primary rounded-pill btn-lg" %>
-                  <%= link_to "削除", event_path(@event.id), method: :delete, class: "btn btn-danger rounded-pill btn-lg" %>
+                  <% unless @event.attendances.present? %>
+                    <%= link_to "削除", event_path(@event.id), method: :delete, class: "btn btn-danger rounded-pill btn-lg" %>
+                  <% end %>
                 </div>
               <% elsif current_user.attendances.where(event: @event).exists? %>
                 <button type="button" class= "btn btn-danger rounded-pill btn-lg mx-auto" disabled>エントリー済み</button>
