--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,7 @@
-<footer class="text-muted py-5">
+<footer class="text-white py-5 bg-dark">
   <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
+    <p class="mb-0 text-center">
+      &copy; 2023 <a href="/" class="text-decoration-none">Roadbike Group Ride</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/docs/5.0/getting-started/introduction/">getting started guide</a>.</p>
   </div>
 </footer>
