--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
           <%= link_to "/events/#{event.id}", class:"text-decoration-none" do %>
             <div class="col">
               <div class="card shadow-sm">
-                <%= image_tag event.images[0], class: "event-img " %>
+                <%= image_tag event.images[0], class: "event-img card-img-top" %>
                 <% if event.available_slots == 0 || event.start_time < Time.zone.today %>
                   <div class='end-of-recruitment'>
                     <span>募集終了</span>
@@ -25,6 +25,13 @@
                 <% end %>
                 <div class="card-body">
                   <h5 class="card-title d-inline-block text-truncate" style="max-width: 100%;"><%= event.title %></h5><br>
+
+                  <div class="event">
+                    <div id="like-btn<%= event.id %>">
+                      <%= render partial: "likes/like", locals: { event: event } %>
+                    </div>
+                  </div>
+
                   <p class="card-text d-inline-block text-truncate" style="max-width: 100%;"><%= event.description %></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
