--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,9 @@
-<footer class="text-white py-5 bg-dark">
-  <div class="container">
-    <p class="mb-0 text-center">
-      &copy; 2023 <a href="/" class="text-decoration-none">Roadbike Group Ride</a>
-    </p>
+<footer>
+  <div class="text-white py-5 bg-dark">
+    <div class="container">
+      <p class="mb-0 text-center">
+        &copy; 2023 <a href="/" class="text-decoration-none">Roadbike Group Ride</a>
+      </p>
+    </div>
   </div>
 </footer>
