--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,8 +27,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="キーワードを入力">
-        <button class="btn btn-outline-success" type="button" id="button-addon2"><i class="fas fa-search"></i> 検索</button>
+        <%= search_form_for Event.ransack(params[:q]), url: search_events_path, html: {class: "search-form"} do |f| %>
+          <%= f.text_field :title, placeholder: 'イベント名から探す', class: 'form-control' %>
+          <br>
+          <%= f.label :sumit, class: "search-button" do %>
+            <input type="submit" value="検索" class="send">
+            <%= f.submit :submit, id: "q_submit", style: "display: none;" %>
+          <% end %>
+        <% end %>
       </div>
       <% if user_signed_in? %>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
