--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,49 @@
-<h2>Sign up</h2>
+<div class="container mt-3 mb-3">
+  <div class="card shadow-sm">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="text-center login">
+        <div class="form-signin shadow bg-white rounded">
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+          <p class="h2 mt-3">新規登録</p>
+          <hr class="border border-primary border-2 opacity-50">
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+          <form>
+              <div class="form-floating mb-3">
+                <%= f.text_field :name, autofocus: true, class:"form-control", placeholder:"名前", autocomplete: "name" %>
+                <label for="name">名前</label>
+              </div>
+              <div class="form-floating mb-3">
+                <%= f.email_field :email, autofocus: true, class:"form-control", placeholder:"メールアドレス", autocomplete: "email" %>
+                <label for="email">メールアドレス</label>
+              </div>
+              <div class="form-floating mb-3">
+                <%= f.password_field :password, class:"form-control", placeholder:"パスワード", autocomplete: "new-password" %>
+                <label for="password">
+                  パスワード
+                  <% if @minimum_password_length %>
+                  （<%= @minimum_password_length %> 文字以上）
+                  <% end %>
+                </label>
+              </div>
+              <div class="form-floating mb-3">
+                <%= f.password_field :password_confirmation, class:"form-control", placeholder:"パスワード", autocomplete: "new-password" %>
+                <label for="password">パスワード（確認用）</label>
+              </div>
+
+              <div class="checkbox mb-3">
+                <% if devise_mapping.rememberable? %>
+                  <div class="field">
+                    <%= f.check_box :remember_me %>
+                    <%= f.label :remember_me %>
+                  </div>
+                <% end %>
+              </div>
+              <button class="w-100 btn btn-lg btn-success mb-3" type="submit"><i class="fas fa-sign-in-alt"></i> 登録</button>
+          </form>
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
