--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -4,10 +4,10 @@
       <%= link_to event_path(event.id), class:"text-decoration-none" do %>
         <div class="col">
           <div class="card shadow-sm">
-            <%= image_tag event.images[0], class: "event-img card-img-top" %>
+            <%= image_tag event.images[0], :width => '200', :height => '200', class: "event-img card-img-top" %>
             <% if event.available_slots == 0 || event.start_time < Time.zone.today %>
-              <div class='end-of-recruitment'>
-                <span>募集終了</span>
+              <div class='close-wrapper'>
+                <span>CLOSED</span>
               </div>
             <% end %>
             <div class="card-body">
@@ -39,5 +39,5 @@
   <% end %>
 </div>
 <div class="mt-3">
-  <%= paginate @events, theme: 'bootstrap-5'%>
+  <%= paginate @events, theme: 'bootstrap-5' %>
 </div>
