--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -11,8 +11,8 @@
               </div>
             <% end %>
             <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title d-inline-block text-truncate" style="max-width: 100%;"><%= event.title %></h5><br>
+              <div class="d-flex justify-content-between align-items-start">
+                <h5 class="card-title d-inline-block text-truncate" style="max-width: 100%;"><%= event.title %></h5>
 
                 <div class="event">
                   <div id="like-btn<%= event.id %>">
