--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -5,7 +5,7 @@
   <p>クリックしてファイルをアップロード</p>
   <%= f.file_field :images, multiple: true %><br>
   <p>タイトル</p>
-  <%= f.text_area :title %><br>
+  <%= f.text_area :title, maxlength:"40" %><br>
   <p>説明</p>
   <%= f.text_area :description %><br>
   <p>カテゴリー</p>
