--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-3 mb-3">
   <div class="card shadow-sm">
-    <%= form_with model: @event, local: true do |f| %>
+    <%= form_with model: @event, id: 'new_event', local: true do |f| %>
       <div class="text-center">
         <div class="form shadow bg-white rounded">
           <%= render 'shared/error_messages', model: f.object %>
@@ -9,7 +9,10 @@
           <hr class="border border-primary border-2 opacity-50">
 
               <div class="form-floating mb-3">
-                <%= f.file_field :images, multiple: true %><br>
+                <div id="previews"></div>
+                <div class="click-upload">
+                  <%= f.file_field :images, multiple: true %><br>
+                </div>
               </div>
               <div class="form-floating m-3">
                 <%= f.text_field :title, class:"form-control", maxlength:"40" %>
