--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <div class="collapse bg-dark" id="navbarHeader">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
@@ -17,8 +17,8 @@
       </div>
     </div>
   </div>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
-    <div class="container">
+  <div class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <div class="container-fluid">
       <a href="/" class="navbar-brand d-flex align-items-center">
         <i class="fa-solid fa-bicycle"></i>
         <strong>Roadbike Group Ride</strong>
