--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -33,7 +33,7 @@
                 </div>
               </div>
               <div class="card-footer">
-                <small class="text-muted"><%= event.start_time.strftime('%Y年%m月%d日%H時%M分') %></small>
+                <small class="text-muted"><%= event.start_time.strftime('出発時刻：%Y年%m月%d日%H時%M分　') %></small>
               </div>
 
             <% end %>
