--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
  *= require_self
  */
  @import "reset";
+ @import "rails_bootstrap_forms";
  
  .selector-for-some-widget {
   box-sizing: content-box;
