--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,29 +1,67 @@
-<p class="h2">イベント編集画面</p>
-<%= form_with model: @event, local: true  do |f| %>
-  <%= render 'shared/error_messages', model: f.object %>
+<div class="container mt-3 mb-3">
+  <div class="card shadow-sm">
+    <%= form_with model: @event, id: 'new_event', local: true do |f| %>
+      <div class="text-center">
+        <div class="form shadow bg-white rounded">
+          <%= render 'shared/error_messages', model: f.object %>
 
-  <p>クリックしてファイルをアップロード</p>
-  <%= f.file_field :images, multiple: true %><br>
-  <p>タイトル</p>
-  <%= f.text_area :title, maxlength:"40" %><br>
-  <p>説明</p>
-  <%= f.text_area :description %><br>
-  <p>カテゴリー</p>
-  <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"select-box", id:"event-category"}) %>
-  <p>募集人数</p>
-  <%= f.text_area :capacity %>人<br>
-  <p>集合場所</p>
-  <%= f.text_area :meeting_place %><br>
-  <p>帰着場所</p>
-  <%= f.text_area :return_place %><br>
-  <p>走行距離</p>
-  <%= f.text_area :distance %>km<br>
-  <p>獲得標高</p>
-  <%= f.text_area :climbing %>m<br>
-  <label class="control-label" for="">出発日時</label>
-  <%= f.datetime_field :start_time, class: 'form-control' %><br>
-  <label class="control-label" for="">解散日時</label>
-  <%= f.datetime_field :end_time, class: 'form-control' %><br>
-  <%= f.submit '変更する', class:"btn btn-primary rounded-pill btn-lg"  %>
-  <%=link_to 'もどる', "/events/#{@event.id}", class:"btn btn-outline-primary rounded-pill btn-lg" %>
-<% end %>
+          <p class="h2 mt-3">イベント編集画面</p>
+          <hr class="border border-primary border-2 opacity-50">
+
+              <div class="m-3">
+                <div id="previews"></div>
+                <label for="formFileMultiple" class="form-label">ファイルを選択</label>
+                <div class="click-upload form-control" type="file" id="formFileMultiple" multiple>
+                  <%= f.file_field :images, multiple: true %><br>
+                </div>
+              </div>
+
+              <div class="form-floating m-3">
+                <%= f.text_field :title, class:"form-control", maxlength:"40" %>
+                <label for="title">タイトル</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.text_area :description, class:"form-control", rows:"7", maxlength:"1000" %>
+                <label for="description">説明</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"select-box form-select", id:"event-category"}) %>
+                <label for="category">カテゴリ</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.text_field :capacity, class:"form-control" %>人<br>
+                <label for="meeting_place">募集人数</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.text_field :meeting_place, class:"form-control" %>
+                <label for="meeting_place">集合場所</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.text_field :return_place, class:"form-control" %>
+                <label for="return_place">帰着場所</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.number_field :distance, class:"form-control" %>km<br>
+                <label for="distance">走行距離</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.number_field :climbing, class:"form-control" %>m<br>
+                <label for="climbing">獲得標高</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.datetime_field :start_time, class:"form-control" %>
+                <label class="control-label" for="">出発日時</label>
+              </div>
+              <div class="form-floating m-3">
+                <%= f.datetime_field :end_time, class:"form-control" %>
+                <label class="control-label" for="">解散日時</label>
+              </div>
+
+
+                <%= f.submit '変更する', class:"btn btn-primary rounded-pill btn-lg mb-3" %>
+                <%=link_to 'もどる', "/events/#{@event.id}", class:"btn btn-outline-primary rounded-pill btn-lg mb-3" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
